--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-particles-js": "^3.5.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-tsparticles": "^1.41.5",
     "styled-components": "^5.3.0",
     "tsparticles": "^1.30.4",
     "web-vitals": "^1.1.2"
